@@ -1,3 +1,13 @@
+jpress v3.2.3:
+新增：新增用户绑定账号后，取消绑定的功能
+新增：尝试性支持 jdk11 ~ jdk14
+修复：快递100查询时因签名未转大写，造成签名错误而无法正常显示快递信息问题。感谢 @lixuanqun
+修复：下载的附件目录不规范的问题，感谢 @Retire
+优化：优化 OauthConnector，支持可以自由配置回调域名
+优化：优化 违法关键字 词库
+
+
+
 jpress v3.2.2:
 优化：JPress 的安装和升级流程
 优化：重构第三方登录的授权流程
